[project]
name = "py2max"
description = "A library for offline generation of Max/MSP patcher (.maxpat) files."
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
version = "0.2.1"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Max", "maxpat", "offline"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
server = [
    "websockets>=12.0",
    "ptpython>=3.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.11.10",
    "websockets>=12.0",
    "ptpython>=3.0.0",
    "twine>=6.2.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/shakfu/py2max"
Documentation = "https://github.com/shakfu/py2max#readme"
Repository = "https://github.com/shakfu/py2max.git"
Issues = "https://github.com/shakfu/py2max/issues"
Changelog = "https://github.com/shakfu/py2max/blob/main/CHANGELOG.md"

[project.scripts]
py2max = "py2max.__main__:main"

# [tool.uv]
# python-preference = "only-system" # comment this out to use managed python

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "py2max"
module-root = ""
source-include = ["CHANGELOG.md", "tests/**"]

