[project]
name = "py2max"
description = "A library for offline generation of Max/MSP patcher (.maxpat) files."
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
maintainers = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
version = "0.3.5"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Max", "maxpat", "offline"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Optional graph-layout backends. The core library ships zero runtime
# dependencies and does not import these; they are alternative layout engines
# exercised by tests/test_layout_graph_layout.py. Install with:
#   pip install "py2max[graph]"    (or: uv sync --extra graph)
#
# These cover the useful layout families: constraint/force-directed via
# graph-layout, OGDF's layered/orthogonal/planar via ogdf-py, and the HOLA
# orthogonal layout via hola-graph; the older networkx/tsmpy/pygraphviz
# experiment tests are redundant with them.
graph = [
    "graph-layout>=0.4",   # pure-Python constraint / force-directed layouts (COLA, ...)
    "ogdf-py>=0.3; python_version >= '3.10'",  # OGDF (C++) bindings; wheels for 3.10+
    "hola-graph>=0.1",     # HOLA human-like orthogonal layout (adaptagrams)
]

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.11.10",
    "twine>=6.2.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/shakfu/py2max"
Documentation = "https://github.com/shakfu/py2max#readme"
Repository = "https://github.com/shakfu/py2max.git"
Issues = "https://github.com/shakfu/py2max/issues"
Changelog = "https://github.com/shakfu/py2max/blob/main/CHANGELOG.md"

[project.scripts]
py2max = "py2max.__main__:main"

# [tool.uv]
# python-preference = "only-system" # comment this out to use managed python

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "py2max"
module-root = ""
source-include = ["CHANGELOG.md", "tests/**"]

[tool.mypy]
# Full strict checking, backing the shipped py.typed marker. The whole package
# is annotated to pass `mypy --strict`.
python_version = "3.9"
strict = true

# The optional graph-layout backends are third-party and untyped, and are only
# ever lazy-imported inside functions. Do not follow mypy into them -- they are
# not part of py2max's typed surface, and graph-layout pulls in numpy, whose
# modern stubs cannot be parsed under the 3.9 target.
[[tool.mypy.overrides]]
module = ["graph_layout.*", "ogdf", "ogdf.*", "hola_graph.*", "numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true

